fix to not shows undeployed mtas